--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Prework Platzi</title>
 </head>
 <body>
-    <h1>Hola parce</h1>
-        <p>Hola como estan estoy probando el sitio web</p>
+    <h1>Hola parce v2</h1>
+        <p>Hola como estan estoy probando el sitio web,</p>
+        <p>Nueva linea para mirar el github</p>
 </body>
 </html>
